Just updating some changes.

--- a/00_Chris_DeLeon_Training/01_game/pong_review.html
+++ b/00_Chris_DeLeon_Training/01_game/pong_review.html
@@ -14,24 +14,42 @@
     var ballSpeedX = 5;
     var ballSpeedY = 7;
 
+    const BRICK_W = 80;
+    const BRICK_H = 20;
+    const BRICK_GAP = 2;
+    const BRICK_COLS = 10;
+    const BRICK_ROWS = 14;
+    var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
+
     const PADDLE_WIDTH = 100;
     const PADDLE_THICKNESS = 10;
     const PADDLE_DIST_FROM_EDGE = 60;
     var paddleX = 400;
 
-
-
     var canvas, canvasContext;
+
+    var mouseX = 0;
+    var mouseY = 0;
 
     function updateMousePos(evt) {
         var rect = canvas.getBoundingClientRect();
         var root = document.documentElement;
 
-        var mouseX = evt.clientX - rect.left - root.scrollLeft;
-        // var mouseY = evt.clientY - rect.top - root.scrollTop;
+        mouseX = evt.clientX - rect.left - root.scrollLeft;
+        mouseY = evt.clientY - rect.top - root.scrollTop;
 
         paddleX = mouseX - PADDLE_WIDTH/2;
     }
+
+    function brickReset() {
+        for(var i=0; i<BRICK_COLS * BRICK_ROWS; i++) {
+            if(Math.random() < 0.5) {
+                brickGrid[i] = true;
+            } else {
+                brickGrid[i] = false;
+            } // end of else (rand check)
+        } // end of for each brick
+    } // end of brickReset func
 
     window.onload = function() {
         canvas = document.getElementById('gameCanvas');
@@ -42,6 +60,7 @@
 
         canvas.addEventListener('mousemove', updateMousePos);
 
+        brickReset();
     }
     
     function updateAll() {
@@ -66,7 +85,6 @@
         }
         if(ballY > canvas.height) { // Bottom
             ballReset();
-            // ballSpeedY *= -1;
         }
         if(ballY < 0) { // Top
             ballSpeedY *= -1;
@@ -89,6 +107,19 @@
         }
     }
 
+    function drawBricks() {
+        for(var eachRow=0;eachRow<BRICK_ROWS;eachRow++) {
+            for (var eachCol = 0;eachCol<BRICK_COLS;eachCol++) {
+
+                var arrayIndex = BRICK_COLS * eachRow + eachCol;
+
+                if(brickGrid[arrayIndex]) {
+                    colorRect(BRICK_W*eachCol,BRICK_H*eachRow, BRICK_W-BRICK_GAP,BRICK_H-BRICK_GAP, 'blue');
+                }
+            } // end of is this brick here
+        } // end of for each brick
+    } // end of drawBricks func
+
     function drawAll() {
         colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
@@ -96,6 +127,12 @@
 
         colorRect(paddleX, canvas.height-PADDLE_DIST_FROM_EDGE, PADDLE_WIDTH,PADDLE_THICKNESS,
             'white');
+
+        drawBricks();
+
+        var mouseBrickCol = Math.floor(mouseX / BRICK_W);
+        var mouseBrickRow = Math.floor(mouseY / BRICK_H);
+        colorText(mouseBrickCol+","+mouseBrickRow, mouseX, mouseY, 'yellow');
     }
 
     function colorRect(topLeftX,topLeftY, boxWidth,boxHeight, fillColor) {
@@ -109,6 +146,11 @@
         canvasContext.beginPath();
         canvasContext.arc(centerX, centerY, radius, 0,Math.PI*2, true);
         canvasContext.fill();
+    }
+
+    function colorText(showWords, textX,textY, fillColor) {
+        canvasContext.fillStyle = fillColor;
+        canvasContext.fillText(showWords, textX, textY);
     }
 
 </script>
