--- a/00_Chris_DeLeon_Training/01_game/pong_review.html
+++ b/00_Chris_DeLeon_Training/01_game/pong_review.html
@@ -15,10 +15,10 @@
     var ballSpeedY = 7;
 
     const BRICK_W = 80;
-    const BRICK_H = 20;
+    const BRICK_H = 40; //temporarily doubled
     const BRICK_GAP = 2;
     const BRICK_COLS = 10;
-    const BRICK_ROWS = 14;
+    const BRICK_ROWS = 7; // temporarily halved
     var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
 
     const PADDLE_WIDTH = 100;
@@ -39,15 +39,17 @@
         mouseY = evt.clientY - rect.top - root.scrollTop;
 
         paddleX = mouseX - PADDLE_WIDTH/2;
+
+        // cheat / hack to test ball in any position
+        ballX = mouseX;
+        ballY = mouseY;
+        ballSpeedX = 4;
+        ballSpeedY = -4;
     }
 
     function brickReset() {
         for(var i=0; i<BRICK_COLS * BRICK_ROWS; i++) {
-            if(Math.random() < 0.5) {
                 brickGrid[i] = true;
-            } else {
-                brickGrid[i] = false;
-            } // end of else (rand check)
         } // end of for each brick
     } // end of brickReset func
 
@@ -61,6 +63,7 @@
         canvas.addEventListener('mousemove', updateMousePos);
 
         brickReset();
+        // ballReset();
     }
     
     function updateAll() {
@@ -73,7 +76,7 @@
         ballY = canvas.height/2;
     }
 
-    function moveAll() {
+    function ballMove(){
         ballX += ballSpeedX;
         ballY += ballSpeedY;
 
@@ -89,15 +92,62 @@
         if(ballY < 0) { // Top
             ballSpeedY *= -1;
         }
+    }
 
+    function ballBrickHandling(){
+        var ballBrickCol = Math.floor(ballX / BRICK_W);
+        var ballBrickRow = Math.floor(ballY / BRICK_H);
+        var brickIndexUnderBall = rowColToArrayIndex(ballBrickCol,
+                ballBrickRow);
+
+        if(ballBrickCol >= 0 && ballBrickCol < BRICK_COLS && BRICK_ROWS >= 0
+                && ballBrickRow < BRICK_ROWS) {
+
+            if (brickGrid[brickIndexUnderBall]) {
+                brickGrid[brickIndexUnderBall] = false;
+
+                var prevBallX = ballX - ballSpeedX;
+                var prevBallY = ballY - ballSpeedY;
+                var prevBrickCol = Math.floor(prevBallX / BRICK_W);
+                var prevBrickRow = Math.floor(prevBallY / BRICK_H);
+
+                var bothTestsFailed = true;
+
+                if(prevBrickCol != ballBrickCol) {
+                    var adjBrickSide = rowColToArrayIndex(prevBrickCol,
+                            ballBrickRow);
+                    if(brickGrid[adjBrickSide] == false) {
+                        ballSpeedX *= -1;
+                        bothTestsFailed = false;
+                    }
+                }
+                if(prevBrickRow != ballBrickRow){
+                    var adjBrickTopBot = rowColToArrayIndex(ballBrickCol,
+                            prevBrickRow);
+                    if(brickGrid[adjBrickTopBot] == false) {
+                        ballSpeedY *= -1;
+                        bothTestsFailed = false;
+                    }
+                }
+
+                if(bothTestsFailed) {
+                    //armpit case, prevents ball from going right through
+                    ballSpeedX *= -1;
+                    ballSpeedY *= -1;
+                }
+            } //end of brick found
+        } // end of valid col and row
+    } // end of ballBrickHandling func
+
+    function ballPaddleHandling(){
         var paddleTopEdgeY = canvas.height-PADDLE_DIST_FROM_EDGE;
         var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
         var paddleLeftEdgeX = paddleX;
         var paddleRightEdgeX = paddleLeftEdgeX + PADDLE_WIDTH;
         if (ballY > paddleTopEdgeY && // below the top of paddle
-            ballY < paddleBottomEdgeY&& // above the bottom of paddle
-            ballX > paddleLeftEdgeX && // right of the left side of paddle
-            ballX < paddleRightEdgeX) { //left of the right side of paddle
+                ballY < paddleBottomEdgeY&& // above the bottom of paddle
+                ballX > paddleLeftEdgeX && // right of the left side of paddle
+                ballX < paddleRightEdgeX) { //left of the right side of paddle
 
             ballSpeedY *= -1;
 
@@ -107,11 +157,24 @@
         }
     }
 
+    function moveAll() {
+        ballMove();
+
+        ballBrickHandling()
+
+        ballPaddleHandling()
+
+    }
+
+    function rowColToArrayIndex(col, row) {
+        return col + BRICK_COLS * row;
+    }
+
     function drawBricks() {
         for(var eachRow=0;eachRow<BRICK_ROWS;eachRow++) {
             for (var eachCol = 0;eachCol<BRICK_COLS;eachCol++) {
 
-                var arrayIndex = BRICK_COLS * eachRow + eachCol;
+                var arrayIndex = rowColToArrayIndex(eachCol, eachRow);
 
                 if(brickGrid[arrayIndex]) {
                     colorRect(BRICK_W*eachCol,BRICK_H*eachRow, BRICK_W-BRICK_GAP,BRICK_H-BRICK_GAP, 'blue');
@@ -130,9 +193,7 @@
 
         drawBricks();
 
-        var mouseBrickCol = Math.floor(mouseX / BRICK_W);
-        var mouseBrickRow = Math.floor(mouseY / BRICK_H);
-        colorText(mouseBrickCol+","+mouseBrickRow, mouseX, mouseY, 'yellow');
+
     }
 
     function colorRect(topLeftX,topLeftY, boxWidth,boxHeight, fillColor) {
