--- a/00_Chris_DeLeon_Training/01_game/Racing_Game.html
+++ b/00_Chris_DeLeon_Training/01_game/Racing_Game.html
@@ -9,23 +9,34 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script>
+    var carPic = Document.createElement("img");
+    var carPicLoaded = false;
+
     var ballX = 75;
     var ballY = 75;
     var ballSpeedX = 5;
     var ballSpeedY = 7;
 
-    const BRICK_W = 80;
-    const BRICK_H = 20;
-    const BRICK_GAP = 2;
-    const BRICK_COLS = 10;
-    const BRICK_ROWS = 14;
-    var brickGrid = new Array(BRICK_COLS * BRICK_ROWS);
-    var bricksLeft = 0;
-
-    const PADDLE_WIDTH = 100;
-    const PADDLE_THICKNESS = 10;
-    const PADDLE_DIST_FROM_EDGE = 60;
-    var paddleX = 400;
+    const TRACK_W = 40;
+    const TRACK_H = 40;
+    const TRACK_GAP = 2;
+    const TRACK_COLS = 20;
+    const TRACK_ROWS = 15;
+    var trackGrid = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+				 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1,
+				 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1,
+				 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1,
+				 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 0, 2, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1,
+				 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,
+				 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1,
+				 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1];
 
     var canvas, canvasContext;
 
@@ -39,7 +50,6 @@
         mouseX = evt.clientX - rect.left - root.scrollLeft;
         mouseY = evt.clientY - rect.top - root.scrollTop;
 
-        paddleX = mouseX - PADDLE_WIDTH/2;
 
         // cheat / hack to test ball in any position
         /*ballX = mouseX;
@@ -49,18 +59,6 @@
          */
     }
 
-    function brickReset() {
-        bricksLeft = 0;
-        var i;
-        for(i=0; i < 3 * BRICK_COLS; i++) {
-            brickGrid[i] = false;
-        }
-        for(;i < BRICK_COLS * BRICK_ROWS;i++){
-            brickGrid[i] = true;
-            bricksLeft++;
-        }// end of for each brick
-    } // end of brickReset func
-
     window.onload = function() {
         canvas = document.getElementById('gameCanvas');
         canvasContext = canvas.getContext('2d');
@@ -69,8 +67,12 @@
         setInterval(updateAll, 1000/framesPerSecond);
 
         canvas.addEventListener('mousemove', updateMousePos);
-
-        brickReset();
+		
+        carPic.onload = function () {
+            carPicLoaded = true;
+        }
+        carPic.src = "player1car.png";
+        
         ballReset();
     }
 
@@ -80,9 +82,19 @@
     }
 
     function ballReset() {
-        ballX = canvas.width/2;
-        ballY = canvas.height/2;
-    }
+        for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
+            for (var eachCol = 0;eachCol<TRACK_COLS;eachCol++) {
+
+                var arrayIndex = rowColToArrayIndex(eachCol, eachRow);
+
+                if(trackGrid[arrayIndex] == 2) {
+					trackGrid[arrayIndex] = 0;
+					ballX = eachCol * TRACK_W;
+					ballY = eachRow * TRACK_H;
+				}
+			}
+		}
+	}
 
     function ballMove(){
         ballX += ballSpeedX;
@@ -96,52 +108,49 @@
         }
         if(ballY > canvas.height) { // Bottom
             ballReset();
-            brickReset();
+            trackReset();
         }
         if(ballY < 0 && ballSpeedY < 0.0) { // Top
             ballSpeedY *= -1;
         }
     }
 
-    function isBrickAtColRow(col,row){
-        if(col >= 0 && col < BRICK_COLS && row >= 0
-                && row < BRICK_ROWS) {
-            var brickIndexUnderCoord = rowColToArrayIndex(col, row);
-            return brickGrid[brickIndexUnderCoord];
+    function isTrackAtColRow(col,row){
+        if(col >= 0 && col < TRACK_COLS && row >= 0
+                && row < TRACK_ROWS) {
+            var trackIndexUnderCoord = rowColToArrayIndex(col, row);
+            return (trackGrid[trackIndexUnderCoord] == 1);
         } else {
             return false;
         }
     }
 
-    function ballBrickHandling(){
-        var ballBrickCol = Math.floor(ballX / BRICK_W);
-        var ballBrickRow = Math.floor(ballY / BRICK_H);
-        var brickIndexUnderBall = rowColToArrayIndex(ballBrickCol,
-                ballBrickRow);
+    function ballTrackHandling(){
+        var ballTrackCol = Math.floor(ballX / TRACK_W);
+        var ballTrackRow = Math.floor(ballY / TRACK_H);
+        var trackIndexUnderBall = rowColToArrayIndex(ballTrackCol,
+                ballTrackRow);
 
-        if(ballBrickCol >= 0 && ballBrickCol < BRICK_COLS && BRICK_ROWS >= 0
-                && ballBrickRow < BRICK_ROWS) {
+        if(ballTrackCol >= 0 && ballTrackCol < TRACK_COLS && TRACK_ROWS >= 0
+                && ballTrackRow < TRACK_ROWS) {
 
-            if (isBrickAtColRow (ballBrickCol,ballBrickRow)) {
-                brickGrid[brickIndexUnderBall] = false;
-                bricksLeft--;
-                console.log(bricksLeft);
+            if (isTrackAtColRow (ballTrackCol,ballTrackRow)) {
 
                 var prevBallX = ballX - ballSpeedX;
                 var prevBallY = ballY - ballSpeedY;
-                var prevBrickCol = Math.floor(prevBallX / BRICK_W);
-                var prevBrickRow = Math.floor(prevBallY / BRICK_H);
+                var prevTrackCol = Math.floor(prevBallX / TRACK_W);
+                var prevTrackRow = Math.floor(prevBallY / TRACK_H);
 
                 var bothTestsFailed = true;
 
-                if(prevBrickCol != ballBrickCol) {
-                    if(isBrickAtColRow(prevBrickCol, ballBrickRow) == false) {
+                if(prevTrackCol != ballTrackCol) {
+                    if(isTrackAtColRow(prevTrackCol, ballTrackRow) == false) {
                         ballSpeedX *= -1;
                         bothTestsFailed = false;
                     }
                 }
-                if(prevBrickRow != ballBrickRow){
-                    if(isBrickAtColRow(ballBrickCol, prevBrickRow) == false) {
+                if(prevTrackRow != ballTrackRow){
+                    if(isTrackAtColRow(ballTrackCol, prevTrackRow) == false) {
                         ballSpeedY *= -1;
                         bothTestsFailed = false;
                     }
@@ -152,67 +161,45 @@
                     ballSpeedX *= -1;
                     ballSpeedY *= -1;
                 }
-            } //end of brick found
+            } //end of track found
         } // end of valid col and row
-    } // end of ballBrickHandling func
+    } // end of ballTrackHandling func
 
-    function ballPaddleHandling(){
-        var paddleTopEdgeY = canvas.height-PADDLE_DIST_FROM_EDGE;
-        var paddleBottomEdgeY = paddleTopEdgeY + PADDLE_THICKNESS;
-        var paddleLeftEdgeX = paddleX;
-        var paddleRightEdgeX = paddleLeftEdgeX + PADDLE_WIDTH;
-        if (ballY > paddleTopEdgeY && // below the top of paddle
-                ballY < paddleBottomEdgeY&& // above the bottom of paddle
-                ballX > paddleLeftEdgeX && // right of the left side of paddle
-                ballX < paddleRightEdgeX) { //left of the right side of paddle
-
-            ballSpeedY *= -1;
-
-            var centerOfPaddleX = paddleX + PADDLE_WIDTH/2;
-            var ballDistFromPaddleCenterX = ballX - centerOfPaddleX;
-            ballSpeedX = ballDistFromPaddleCenterX * 0.35;
-
-            if(bricksLeft == 0){
-                brickReset();
-            } //out of bricks
-        } //ball center inside paddle
-    } // end of ballPaddleHandling
 
     function moveAll() {
-        ballMove();
+        // ballMove();
 
-        ballBrickHandling()
+        ballTrackHandling()
 
-        ballPaddleHandling()
 
     }
 
     function rowColToArrayIndex(col, row) {
-        return col + BRICK_COLS * row;
+        return col + TRACK_COLS * row;
     }
 
-    function drawBricks() {
-        for(var eachRow=0;eachRow<BRICK_ROWS;eachRow++) {
-            for (var eachCol = 0;eachCol<BRICK_COLS;eachCol++) {
+    function drawTrack() {
+        for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
+            for (var eachCol = 0;eachCol<TRACK_COLS;eachCol++) {
 
                 var arrayIndex = rowColToArrayIndex(eachCol, eachRow);
 
-                if(brickGrid[arrayIndex]) {
-                    colorRect(BRICK_W*eachCol,BRICK_H*eachRow, BRICK_W-BRICK_GAP,BRICK_H-BRICK_GAP, 'blue');
+                if(trackGrid[arrayIndex] == 1) {
+                    colorRect(TRACK_W*eachCol,TRACK_H*eachRow, TRACK_W-TRACK_GAP,TRACK_H-TRACK_GAP, 'blue');
                 }
-            } // end of is this brick here
-        } // end of for each brick
-    } // end of drawBricks func
+            } // end of is this track here
+        } // end of for each track
+    } // end of drawTrack func
 
     function drawAll() {
         colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
-        colorCircle(ballX,ballY, 10, 'white'); // draw ball
+        //colorCircle(ballX,ballY, 10, 'white'); // draw ball
+        if(carPicLoaded){
+            canvasContext.drawImage(carPic, ballX - carPic.width/2, ballY - carPic.height/2);
+        }
 
-        colorRect(paddleX, canvas.height-PADDLE_DIST_FROM_EDGE, PADDLE_WIDTH,PADDLE_THICKNESS,
-                'white');
-
-        drawBricks();
+        drawTrack();
 
 
     }
