--- a/00_Chris_DeLeon_Training/01_game/Racing_Game.html
+++ b/00_Chris_DeLeon_Training/01_game/Racing_Game.html
@@ -9,13 +9,14 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script>
-    var carPic = Document.createElement("img");
+    var carPic = document.createElement("img");
     var carPicLoaded = false;
 
-    var ballX = 75;
-    var ballY = 75;
-    var ballSpeedX = 5;
-    var ballSpeedY = 7;
+    var carX = 75;
+    var carY = 75;
+    var carAng = 0;
+    var carSpeedX = 5;
+    var carSpeedY = 7;
 
     const TRACK_W = 40;
     const TRACK_H = 40;
@@ -51,11 +52,11 @@
         mouseY = evt.clientY - rect.top - root.scrollTop;
 
 
-        // cheat / hack to test ball in any position
-        /*ballX = mouseX;
-         ballY = mouseY;
-         ballSpeedX = 4;
-         ballSpeedY = -4;
+        // cheat / hack to test car in any position
+        /*carX = mouseX;
+         carY = mouseY;
+         carSpeedX = 4;
+         carSpeedY = -4;
          */
     }
 
@@ -73,7 +74,7 @@
         }
         carPic.src = "player1car.png";
         
-        ballReset();
+        carReset();
     }
 
     function updateAll() {
@@ -81,7 +82,7 @@
         drawAll();
     }
 
-    function ballReset() {
+    function carReset() {
         for(var eachRow=0;eachRow<TRACK_ROWS;eachRow++) {
             for (var eachCol = 0;eachCol<TRACK_COLS;eachCol++) {
 
@@ -89,29 +90,30 @@
 
                 if(trackGrid[arrayIndex] == 2) {
 					trackGrid[arrayIndex] = 0;
-					ballX = eachCol * TRACK_W;
-					ballY = eachRow * TRACK_H;
+					carX = eachCol * TRACK_W;
+					carY = eachRow * TRACK_H;
 				}
 			}
 		}
 	}
 
-    function ballMove(){
-        ballX += ballSpeedX;
-        ballY += ballSpeedY;
+    function carMove(){
+        //carX += carSpeedX;
+        //carY += carSpeedY;
+        carAng += 0.02;
 
-        if(ballX > canvas.width && ballSpeedX > 0.0) { //Right
-            ballSpeedX *= -1;
+        if(carX > canvas.width && carSpeedX > 0.0) { //Right
+            carSpeedX *= -1;
         }
-        if(ballX < 0 && ballSpeedX < 0.0) { // Left
-            ballSpeedX *= -1;
+        if(carX < 0 && carSpeedX < 0.0) { // Left
+            carSpeedX *= -1;
         }
-        if(ballY > canvas.height) { // Bottom
-            ballReset();
+        if(carY > canvas.height) { // Bottom
+            carReset();
             trackReset();
         }
-        if(ballY < 0 && ballSpeedY < 0.0) { // Top
-            ballSpeedY *= -1;
+        if(carY < 0 && carSpeedY < 0.0) { // Top
+            carSpeedY *= -1;
         }
     }
 
@@ -125,52 +127,51 @@
         }
     }
 
-    function ballTrackHandling(){
-        var ballTrackCol = Math.floor(ballX / TRACK_W);
-        var ballTrackRow = Math.floor(ballY / TRACK_H);
-        var trackIndexUnderBall = rowColToArrayIndex(ballTrackCol,
-                ballTrackRow);
+    function carTrackHandling(){
+        var carTrackCol = Math.floor(carX / TRACK_W);
+        var carTrackRow = Math.floor(carY / TRACK_H);
+        var trackIndexUnderCar = rowColToArrayIndex(carTrackCol,
+                carTrackRow);
 
-        if(ballTrackCol >= 0 && ballTrackCol < TRACK_COLS && TRACK_ROWS >= 0
-                && ballTrackRow < TRACK_ROWS) {
+        if(carTrackCol >= 0 && carTrackCol < TRACK_COLS && TRACK_ROWS >= 0
+                && carTrackRow < TRACK_ROWS) {
 
-            if (isTrackAtColRow (ballTrackCol,ballTrackRow)) {
+            if (isTrackAtColRow (carTrackCol,carTrackRow)) {
 
-                var prevBallX = ballX - ballSpeedX;
-                var prevBallY = ballY - ballSpeedY;
-                var prevTrackCol = Math.floor(prevBallX / TRACK_W);
-                var prevTrackRow = Math.floor(prevBallY / TRACK_H);
+                var prevCarX = carX - carSpeedX;
+                var prevCarY = carY - carSpeedY;
+                var prevTrackCol = Math.floor(prevCarX / TRACK_W);
+                var prevTrackRow = Math.floor(prevCarY / TRACK_H);
 
                 var bothTestsFailed = true;
 
-                if(prevTrackCol != ballTrackCol) {
-                    if(isTrackAtColRow(prevTrackCol, ballTrackRow) == false) {
-                        ballSpeedX *= -1;
+                if(prevTrackCol != carTrackCol) {
+                    if(isTrackAtColRow(prevTrackCol, carTrackRow) == false) {
+                        carSpeedX *= -1;
                         bothTestsFailed = false;
                     }
                 }
-                if(prevTrackRow != ballTrackRow){
-                    if(isTrackAtColRow(ballTrackCol, prevTrackRow) == false) {
-                        ballSpeedY *= -1;
+                if(prevTrackRow != carTrackRow){
+                    if(isTrackAtColRow(carTrackCol, prevTrackRow) == false) {
+                        carSpeedY *= -1;
                         bothTestsFailed = false;
                     }
                 }
 
                 if(bothTestsFailed) {
-                    //armpit case, prevents ball from going right through
-                    ballSpeedX *= -1;
-                    ballSpeedY *= -1;
+                    //armpit case, prevents car from going right through
+                    carSpeedX *= -1;
+                    carSpeedY *= -1;
                 }
             } //end of track found
         } // end of valid col and row
-    } // end of ballTrackHandling func
+    } // end of carTrackHandling func
 
 
     function moveAll() {
-        // ballMove();
+        carMove();
 
-        ballTrackHandling()
-
+        carTrackHandling()
 
     }
 
@@ -194,13 +195,21 @@
     function drawAll() {
         colorRect(0,0, canvas.width,canvas.height, 'black'); // clear screen
 
-        //colorCircle(ballX,ballY, 10, 'white'); // draw ball
+        //colorCircle(carX,carY, 10, 'white'); // draw car
         if(carPicLoaded){
-            canvasContext.drawImage(carPic, ballX - carPic.width/2, ballY - carPic.height/2);
+            drawBitmapCenteredWithRotation(carPic, carX, carY, carAng);
         }
 
         drawTrack();
 
+    }
+
+    function drawBitmapCenteredWithRotation(useBitmap, atX, atY, withAng){
+        canvasContext.save();
+        canvasContext.translate(atX, atY);
+        canvasContext.rotate(withAng);
+        canvasContext.drawImage(useBitmap,-useBitmap.width/2,-useBitmap.height/2);
+        canvasContext.restore();
 
     }
 
