added Math.Sin and Math.Cos to car movement

--- a/00_Chris_DeLeon_Training/01_game/Racing_Game.html
+++ b/00_Chris_DeLeon_Training/01_game/Racing_Game.html
@@ -15,8 +15,7 @@
     var carX = 75;
     var carY = 75;
     var carAng = 0;
-    var carSpeedX = 5;
-    var carSpeedY = 7;
+    var carSpeed = 2;
 
     const TRACK_W = 40;
     const TRACK_H = 40;
@@ -98,8 +97,9 @@
 	}
 
     function carMove(){
-        //carX += carSpeedX;
-        //carY += carSpeedY;
+        carX += Math.cos(carAng) * carSpeed;
+        carY += Math.sin(carAng) * carSpeed;
+
         carAng += 0.02;
 
         if(carX > canvas.width && carSpeedX > 0.0) { //Right
