--- a/00_Chris_DeLeon_Training/01_game/Warrior_Legend.html
+++ b/00_Chris_DeLeon_Training/01_game/Warrior_Legend.html
@@ -8,9 +8,9 @@
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="js/Car.js"></script>
+<script src="js/Warrior.js"></script>
 <script src="js/Main.js"></script>
-<script src="js/Track.js"></script>
+<script src="js/World.js"></script>
 <script src="js/Input.js"></script>
 <script src="js/ImageLoading.js"></script>
 <script src="js/GraphicsCommon.js"></script>
